--- a/presentación/frmPresupuesto.resx
+++ b/presentación/frmPresupuesto.resx
@@ -117,4 +117,179 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnPrinter.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAFJFJREFUeF7t
+        XQtwVNd51jSN7ThNpjOdpokdx0nqNpnMdNqm4NbpuHVa27ET2xAbbLcuL/FwEsA2BszTsLwMApuHpPtY
+        CRAI7d67iwA/mthjk8bYtJ24+MnTBlsCDEICPe5rhV6cnu/sWbGS7qK9e+8u0u79Zz4jeR+65/u+c85/
+        zj3n3KJ8jGDg7PUhse27qqCNDMnGgxFJW6pKZpUiG3sjknGMokERdU0Vza6IZHZHRDNGf7+gysbHYdF4
+        WxGNkCIZy0Pl2qOqqP3DDkG7ZUvJ+a/wr/djKEUgcPiacJn+/bDYOjoqGSupeC9FZOsDKnIjxN21uZPU
+        Vl4kOyvayc5gjEQZLELfQ2H2Ikp/x2t4D96Lz+ymn2WvSUZTVDYP0Z9fDcv62pBojI0Gzb9aP+v0l/hl
+        +JHLCD3fejMXXFRl811ak1sgNAQDdlV2UBETQl8WORPAGPiuhCESoC2GSV//QJX1rSHJeBStBL88P7IR
+        1WVt31EkcyIV9SVaG89C5F6xaa3tL1y2gdai9xoo6HU1qZL1WkQ0pm8vP/+X/LL9cBOC0PRHiqj9LCLF
+        wrQmNiRqH5poO1GuJtBKsFZoCzWDZF1QRWuPIhhj9mxo/WNeHD/SjZrS5m8qsj6HJm4fonbHRc99Lc8U
+        uFZcM7oN2kUdpYZYhKSUF8+PVAGSIsFYCa3tp1nTSpvY/snacAPLHbZ00Z+tc/T3DTs26t/jxfUjEdFN
+        Ld+KCvpqkASyhmIT7xZoFfbQsqF7oKOT9chpePELN2hT/9WwpM9WRPMMyMlH4fsjYYSIZDVEBWNRweYI
+        YaHl/kjQOsD6ygIQvj9gdpYwBq33lTL9AU5L/gcSvJ2SVRGtaO9E1mxHTiEhPoxt74oEjcotZdYNnKb8
+        jJBgPEgTvE9ZX+jB2J2Ou4kimcMSyeUAF3u2dJOoHPtELW8dxenKn6ii/VxYMjZGg7TWs8y+LwGOQQmk
+        Q0Ty5qst5Py5TtLS1DOscKYOFWBguVhrUNHeQctXgjkQTt/wDtrk/0CVY295V+vRf1rk7d82kqMf15Ge
+        nm4y3CJm9NgaAABHuzdTruTY3qpNTX/BaRyeocqto3YG42N6u8I6BZrO3VtM8vv958jho59SfEa6uoaf
+        AUwttQES4BXms7Dcdhenc3hFRLSm0wK0e9LkUyiiRV7crpP3Dpyhwp8gBw/ntwEAcEdzJoMOGYs5rUM/
+        gkHyxbBgrq6tbL/k1fQtxP+1qpEP3z/VK34hGADAcDFa2d4dFvW5nOKhG1WBuusisiXFx7feif/Gi63k
+        o4P15FCS+IViAABc7qq8eEkRjRXRseQLnO6hFViFQ7PXbejvvbgPH8/0LZrpN5NDR+oo+opfSAYA4ibo
+        oJwYG9HKctqHRlQFyHUQnyUuHty8QaYfrTDJfprpHz5GxbYRv9AMAKBioYKpgv782LHRodESYEkWa/Y9
+        qvn9M3074RMoNAMA4BgtgSJoy7kEVzfCgr7aM/FtMv0roRANACRyglB52zwuw9UJVTBmINv3IuFLzvT7
+        J3upUKgGADDCilbEukOCNp7LkduICPr9VPh2L4Z66PPf2MMz/RT9vR0K2QAA7qJGg+1tSlnrHVyW3ASm
+        dzHDR5sh2wtzCpDRcqGDXOyguOgMly5d4rQOn/DKAABbkCpZx5UN7d/m8mQ3sIiDDkX2x5c52V/UlRBf
+        d98XtZUxYunDT8hMAwZAmfvzkOnqZrbARDRfja4n2d+ngLt67A/aXEg6eOrxGjL5P0rJlHFlvZg2oZxc
+        aNI4PfkfKCvKnMwBOAE3dpylAyTiWR8ZsM0YwViXm6TvnrtmkL/+m3vI3/7w/l6MHDmaNDQ0cnryP1BW
+        lDmZA3ACbuw4SwfQBDlZSGy7k8vlbWyXYjcqkl7n9ubOfffMIiNGjCK33jqmF7fd9nDBGQBlTuYAnIAb
+        O87Sxa7KTixDP7S9XP8TLpt3oYp6pZumPwHfANkzAIC1BGFB28hl8yaUUu1nURlNv/vJHt8A2TUA6woq
+        2ttpd/3PXD53gaVJNOt/D82L3R90Ct8A2TUAgKEhRmq4QcdlzDxo0/80Mky7P5QJfANk3wAAKiwdsT3O
+        Zcwsqte0fEuRzDO1ld6t2/cNkBsDYEtaJGh+Vllp/hmX03ngRo8XiV8yfAPkxgAAEkJV1JZwOZ0F26gp
+        GU21FZmN+ZGM7AzGWw7aH1HoDCgkxsC33jq2F7fd9gg5c6aR9PT0FARQVpQ5mQNwAm4SPIEzbIxlS8Iy
+        nHdhO64k68zWF5pv4rKmH/QiSjKt/RB+26azZM3St8i8p8PkiekVFEGGSROfI+PHLSMTxi/vg3nzJbJo
+        UUVBAGXtX35wAm7iPMnkqRmVZP7sKFm37H9IdWljb2Vyij20FQgJWoDLml4oZdYN1H2fO9+zZ7EVQS+s
+        eIf88helZNKklaS4+DkyuXh1L6ZMLiFTp6wdgEkTVxcU7DgAN8lcFRevYhxO/2U52bDyAG8JnA3FoaEi
+        mvWOcgHs2M0k88cFotYnREeBfLhHwhAlgf0ZdQfQEms3uLxXjup1574ckY2PnE754k6WUHKYTMYFT15j
+        WxAfmSPBqVByxHF3wBeTvpvWqWaRcu2nNPG45Gxxp0XCYhuZPXMba7b6X7wPbwBuZz9RRbnWGOf2WgwE
+        ZnCjcqwnJGk/4TKnDkUwVKfNPzJVkToz3uz7tT97WMM4FkuOMs7ttEgFDAkjor6Dy2wfOH8PQz8sTrD7
+        klRA879i0essYbG/cB+2KOawey0FwDG4drp4hBlGMhpqSmPf5HIPDEXQJ2aa/M17WmHJn91F++iL4glr
+        yeSJa8m0x9eQqdPWxH+fFB8FDAZwDK4zTQavuIhUlc2XMzUA+ibfAIOjePxaMnfZUlL1378gr5x9jLx8
+        chwRfzOTzJhFh8zUFHafSQY4BtcZjwZEYw+Xu29sFWI30UzxnNPmH/ANkB5Q0xc89yx5rfkRsr9rNHmr
+        6+cM+Ln2kwlk+lOraEtg/9kE3BgA2iqScXa7dOFGLvvlwHKvTFf7+AZIA7Svnzp1DVEPFjPB3+x4qA/2
+        d40i5S8/QSbRFsL28xxuDACwIaGsDzyGBgcvZ9L8A74BBgea9yfnrSB79YfJvq6+4gNv05Zg94kJNMu3
+        /3wCbg3AugHJKOOyx6N05vFraf//7q7NfguQLcAAT81fTn5rjiVvdg40ALqCPZ+Nt/1sMly3AFRjVbIO
+        QHMuf1HRDvH891RRb82k/wd8AwyOycXxrB99vX0XMJoEX5/B8gS7zyfg1gDQWJWN1h1i0pG18f4/s+Yf
+        8A2QHiaNX0cCmxaQ/6KtwNtU8H20JdjHk8BXzjzGWggMD+0+m4BbAwBstRDVnMvP+v+Vmfb/gG+A9IFh
+        4NKNC8nOI5PI620P0xHBo6T691PJ04uXDVr7AS8MAK1x2giXv6gIj1nxDZA7INPHiGDGrFVk+pPxoV86
+        cwCAdwbQX2His6NdMrj7lwzfAM6BbB+zf2wG0MF0sBcG4Fp/FAyQ6xNLvxqd3lxIhm+A3MELA7BEUDLO
+        RXFkvVLWNiIiWV1ROfMv9A2QO3hhANzqjwat7lCpdmuRKsQedHtqt2+A3MELAwAsDxCMMUWKoAXYGnKb
+        N6UL3wC5g1cGYJpLxlI6AtC2uX1gg2+A3MEzA1DNqfbVRaps7M10BjAB3wC5g1cGwOdpIriviDYDx9zu
+        +vUNkDt4ZwCLGkA/VsSGA74Bhg3iBtjKBLTTIl3EDWCcpzmArjndbNAfvgFyBywKnfErkdSUn2e82+mR
+        NkQzRlsAs9P2RQfAhcx5sopMnmy/48WHd8DK4JnTJWqAJtcGUESzBwbosXvRCTCxsGRRLZk9WyJz5lT4
+        yCJmz5HJgnk7yA7PDCCb7XYvOgEMsHTxLnqBMpk7t9JHFjFnbpAsnF/jjQEksx2jgCbXCYVvgJzBKwMw
+        zan2RapofOwbYPjASwPQUQCGgea+TI8oTcCZATaTZ57xYQdwY8/ZZXhnAD4RRP9T4+ZWMODEALNmiT6u
+        ADvOkuGVAdhUsGRWFymS4f5mkAMD3HnnZHY8yo9+9KiPJIATcGPHWTI8MwC7GaQtLaoRjEdc3w52YIAf
+        /3giGTnyIZJ8QJKPMYwTcGPHWTK8MgBbAigZDxVVB7W/Z6eAUhHt3pgOfAO4Ry4NAL2gOVsQsq207c8j
+        ktno5o6gbwD3yKUBkPPhHlA1loQJAXYU7EFXi0J9A7hGLg0Q19qILwpF0KHgr10tC/cN4Bq5NAC0xlEA
+        THxEuFx/LlcGuOOOCWTEiJ+zAgP4+Yd/V5jozwO4seMsGV4ZgCaAl58uEi4zHsqVAX5y9zRy+z/+O7n9
+        9sfIP1Hcd99U8sCoxwsSKDs4ABfgBNzYcZYMb7qATqKU6Q9w+eNPAaN5gJbx5lAHBpg9O0ghM8yZEyQN
+        Dc2ko6OjIIGyg4MEH+DGjrNkuDVA7+bQjUmbQwOBuutU0Xjfzfbw5UteTssAycD0Z3OLzo9QLrxA2eNT
+        wPb82AGGWTQ/TEJCM6t4dnpcCfHt4eb/RQPkGi5/PFTJkjPtBmCAdSv2kdlzJNuLTgVmgObCeVpY/0DZ
+        nRtAJsuefdFWh3QAjZX+B0QgFCE2JtMt4riZVLH+BJk7p4JeJGB/8f3hG8C5AVDJNq054Pi00AQwBOzT
+        /yeCnxGY8YQQ7VfIyqW/cdQK+AZwZgDU/iULVNb8RzLYyocJIEWyzmxfHxt4SBQiKpv/6aYbqC47RxYv
+        VNM2QSoD4Ez9zs6uPEE3SfV0WycGwFKw+c9Ukc0bPnV8SGQC8eZf383lHhiqqE9xNRzkJlix5JV4dkuN
+        gH9TAd1FfwOYZox8fPwkOXTks7zBqdONpLu7h5fwcqDs4MCOmwQgPHhcsjBKxa/LWHwgbgBzHJd7YFDx
+        vkOb8vOu7gvQC6QuI/ILR8maZXvZhS9aELbF4oUKzYQNTkc8Tnz6Ofnw4HHbp4UPV3zw0XFazoEtHcoO
+        Duy4AcDdqsBrRFj3IQkLLYxbO87TQXz+X2+gQ/7UR8UiVNmKumkF4rCYUzFMufwIlIGIyDoxtL41o67+
+        LCPso0Mn8gYwdFtbX6MjUHZwYMdNAslc2nOdHnBYNFsAMlggQ6ytbL/kdrNIOsAj1PsbAI+EhwmOfXKS
+        fJwnONfYzPKa/oGye/UY+SsB6/+icntPTbDtbi5z6mAPipSNQ25XCaUDOwMk4hLNnPIFqSJXBsDQT8UD
+        I9an8cAIRFjU57Lz5W2+zEtcyQCFELkyALr0aLqPjEFsFZpvwqHCbs8NGAy+AbJvAKahZJysEpq+zuVN
+        LxTRWOX1QyP7wzdA9g0ADcOitozLmn4oG1q/jZnBTB8cmQ58A2TXAGzpt2yeRYvOZXUW9EvWZLMVSGUA
+        TJp0dHTmDVIlgtk2QHzix3D20Mjk2C7FblQl85SXD49Ohp0BDMOiQ8B62wmV4Yr6k+dIV1c3L+HlyKYB
+        MIqj2tWF3Tw8GkEd9IT7iSF72BmgkGYCs2kAVvtFYzqXMfOoXke+jDGk280jdrAzQN3JhrycCdQ0+5nA
+        bBgAWlHN/rd31a/bqCnT7o0GY51u5qLtYGcA9Jn1pxrIJ8dPkU9O5ANOk8amFtLTMzAPyIYBoNFOOXYx
+        LLX9C5fPmwiJmuR1QmhngEKKbBiADfsETeCyeRdVgvl1mg+ccLOBpD98A3hrgPiUr35s63PGn3LZvA21
+        vHUU20foUVfgG8A7A0ATio4aUbuXy5WdoA4r2e1RV+AbwDsDQJOwoK/mMmUvMCqgXcGbXuQDvgG8MQC0
+        oFn/a55l/YNFuEz/Pm1u6t3mA74B3BuArfKVrROYuufy5CbCcttdNB8w3C0f8w3gxgBY5lUbjOlKedu/
+        cllyG6GgMQ2rhzJNCn0DZG4AtkysItativokLsfVCUXSlu6qvEgL4nwJmW+AzAwArmvjQ775XIarF4EA
+        +QPqwhfYqhOHJvAN4NwA4Jjdm5HM9eCey3B1g17INapoBZ2awDeAMwMkxFdkoxycc/qHRpSWkmvDkiHg
+        RkS6OYFvgPQNwMTf0knCkiYEAoeHlviJCE478EVV0J/H0CQdE/gGSM8A4JIN9wRt05AVPxHol+iFPlsb
+        vNg12AmkvgEGNwCG2dGK9m5VMBZFx0a/wGke+qEI+sSIbGlXOnQChbeMwjUAyn4lA7CJNsmKhcv1KZzW
+        4RWYoIjKsU9TTRuj8Gfqu0nL+Z6CBMqeygB72L6MWF3Wb+5kO0Ji43dpAsO2ndvtbFWkwkZ/PtDfx4d5
+        1hs7BO0WTuPwjvWzTn+J5gXLsVLF7f2DfAZLnivaOylX60tKjn2F05c/ERa0e2hrcAhdQqbTx/kIcBHv
+        Jq0TIaH1QU5Xfka1ZHxNlY1S6vR21tTZEFJIwLwJHS11qqK5WVp/wf7olnwMJIgRKbYfzV5tRfZ3Ig81
+        YNcOqwBB651IufZTTkthRTBw9vqdsvUrbGDYs6UzvpHRhqx8AuZGeHN/kvb1s2pKm7/K6Sjc2BE8/w1s
+        YcI+NpCTj0ZgNR65Dy1jSDRWYNcVL74ficBRdTCCGjTr0TyyrDgHJ5VkC5i/RxlQFkU06+nQLrCrvP1m
+        Xlw/UgVaBFXUZlLCDiRuggw2rTyU0Fvbg9Yl2r29gy1awQ3nv8GL50e6gfkDVWi7W5Wt7bQl+Bw1CRiK
+        ZkgkdazVCsZORoLmFiS6OIeZF8cPN7FViN2kSNo4RbJ205p1GrtfE4S7OTsvU+AmDY7WxTVAfDVo1auy
+        qYYF89+2lFk38Mv2IxuBs+5UWR+F+QScfE3H0C2JvrbXFLiL5mBxSirgO+Ji9/1+nKeIDZhYDUW7q3t3
+        +E381YnfBcgfYpl6RNDvx1MwaH/7Eh1ifUDFOReRzG5MtKC1QLfBFlICNokl/h9ew3vwXnwGNZwarIsm
+        pmfpv+9FJH13RDQWQ/CooN0SCASGxpIsP/oG5hfwRCw8Fk0RjDEQLSrFqrGhJSzpR8Px2mvBIAwy/Tlo
+        NCmCfkSRzN/RrqYK99/DojVaKWsbESpvvbl05vFr+dfnURQV/T8Ugi5mM1EtzgAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnFile.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAEQFJREFUeF7t
+        nU1s2+YZx3VpFmRB0POatmgvK+LGsSNRyoAB63lF0aLbaZf1tEvby9rbDhWGAUG6onEsks7HIRlQtFuw
+        w9ICxTC0cJe1Q9o4EilZshPbsRM7n12TOonzZSfvnv9rUaWdhxIlkRRF8QF+rvNUpt73+T8kX75fTETR
+        kp9kN20/qT87UBhSlFPDr6bMkXeUgno4baifpUxtUjHVS/TvRaWgLa9Cv5MP/w+fwWfl39Df4hg4Fo5J
+        4NiRgnV2E31HsxuSY7nn0oXcKyTgn1Kmeixd0g3F0K4ohr6SqRwUmfIBkRnfL3aVRkS6aKGLtFkFv1f9
+        +Aw+K/+G/hbHwLFwTBwb34HvwnfiuwmUoWthnWFnMK8+PUAiKKaukyCnSMBrEOtnE4RNcCmqJXKr0DGs
+        hMCx8R34LnwnvhtlQFlQJgJl6ypYZxjp/zr3zEBh+DWlqB/LFEcuSkEgBv1XntmceD4irxS2MqBMKBvK
+        iLISKHPoYZ1hoW80u5kC+mLaHPlQKemX5OUc4OxmROkk8ipRLR/KijKj7KgDgbqEEtbZafpP7NmaLOx7
+        my6zZrq0n86yQ6EU3QmUFWVG2VEH1AV1IlC3UME6O4Vycu+zaUPbo5javHVplQ00JshdAZXduk2gTrJu
+        VEcCdQ0FrDNokmP7nqKW9m5qcF3eNdldZ7tbUCfUDXVEXVFnAnXvKKwzKDInsluSee0txVAvRFX49ViJ
+        gDqj7ogBgVh0BNYZBMqp4ZfobBhbfWyLvvDrQZ1Rd8QAsSAQk8BhnX5C9/qtyaJ2kBpI9+XzNBOcXkLG
+        gGKBmCA29jZRELBOv9iBbtmiPlO9F7IB6UnQA0kxQWwQIwKxCgTW6TUDo3sfTxa0IaV04L5s2XNBiJFP
+        DIgRYoWYEYidr7BOLxnM799Gj0PH5XNxfNY3hmK0Giv9OGJHIIa+wTq9IlVQX6YKzWfoOZitbIwjMmYU
+        O8SQQCx9gXV6g/56ujRyJ77kt46MHcUQsSQQU89hne2QHDvwmGLkdivlAw93oSuUqViMexBDxBIxRWwJ
+        xNgzWGervDCa3Zg0tRH5fNuBEbrIQrFETBFbxJhArD2BdbZCciy7SSnoR9DvHTf2fEA2Dg8KxBixJhDz
+        tmGdzUIJsFExIb5svfIVqEKfEzuMnNhpqCJpaJFip0l1MjW23p5AsUWMkQSIuf0EbBXW2Qx9R7MbUgZd
+        9l085kF88O65z4V5c0HM3f4uUnx1aUr8uvQX0W/m2Pp7QvUxETFH7O0zpVqBdTYDGifVPm2+wDZw5g/N
+        fyGiate/XRT/qVTEb0of+J8EFHPZ2DZy0KBlWKdbUsbwG2lqoboRHyh0eTyzdLUarujZlavXRKU0K05M
+        TIjfjn/kexIg9tCAgBYtwTrdoGA0j55R5awXroAOXLj7fTVc0TMkgFmaFhPlWfH1xGnxu/G/+ZsEiD1p
+        AC3sA27NwDobMZh/bxtl4HwrnTwLd69XwxU9sxKgVJ4RFUqCkxNnxJvlv/uaBFID0gKaENCmKVhnPTIn
+        sltShvplBo0+pkCN6JUEsJIgX5kSb1f+4W8SyEYhadLC5BLWWQ+MVMnhXKYgbuilBFhNgrPCqEyLP1Q+
+        Edt9TAJoAm0IaOQa1ukEFkDQPWe5nV6+XksAUKYkKE7MiD9WPvUvCaAJaQONCGjlCtbJscN4/wmloM22
+        O7jTiwkAxikJyhOzYnflnzIJ0B/CxacdoA00glYENGsI6+RQCuqhdi79Fr2aAABJUJmYE+9V/iUGTNWX
+        JIBG0IqAZg1hneuRq3OK+rLb5/169HICgHFikpJgX+VzsdPUZN8IF6eWgUakFTQjoF1dWKedvtHs5pSh
+        5TNlbyZ19HoCAJkElTmhV0ZlAnidBNAKmkE7+4orDtZpJ5lXfy+7epkvaoVGCXDnzj0xO3dRnJ46L85M
+        hwQqy+Ur34kHDx5US8mb2wQAVhIcqvxb7KKz1utBJDl8TNoR0NAR1llDrthRL7Tb8LPTKAHOkvhGcUoU
+        x6dDhVmaEteuL1ZLyVszCWCBJDhS+Ur8vLhf3hK4mLWCbBCSds9/oz1JJJxgnRaKkdvtRcPPTr0EePhQ
+        iKnpBRlsLlidBEn57f/qJy+uEvgcksAtRaIyPis+KP9X/MIk0TxMAtkgbDBgxDrBdixiNLWrXi/XanQF
+        WLxxS0ycnpNBH6+cDQUlar3jtrS8vFItJW/fL96kz10Sc+cvN8U54uL5q+LYOcPTWwG0g4bQkoCmj8A6
+        wU4jt8frsx+4aQQur6yIe/fuh4qHuDz5bBfvLrIxawdoCC0JaPoIrHMwn/sJPaMu+LFY000C9KohNlzM
+        2mH1KqAvQFMC2q7hEQfAqlU5w4c5YLvECeBsfiQAgJbQlIC2a3jE0W/++ccpUy162fK3EyeAs/mVANAS
+        mkJbAhrXWPMPkCmov0yP73/YaHJnq8QJ4Gx+JYDUkjSFtgQ0rrHmHxJD+6uc2s0dyAPiBHA23xKAkFvu
+        kLYENK6x5h+DefVpxfD+0c9OnADO5mcCyMYgaQuN7dvv1X4BA4Xh1/xeyBkngLP5mQAA2kJj+1hP7ReQ
+        NrSPvez354gTwNn8TgCpLWlMQGtJ7RflG+1Jug1c9vPyD+IEcDbfrwCkLTSG1gQ0T8gfYKCQe8WvRz87
+        cQI4m98JAKAxtLZmeskfQCnoup+tfws3CYBO1wcPHkYKNxZEAlQXmOoENMeMIPrx6Zs/ws7XXk36qEej
+        BLh9+66YPrsgB4SixNm5C3KuQz0L5gpwUEDrRDm7gUgk8KP/5NBPFUO9HsSGDo0SYGb2gsBwMDcm381g
+        mBgjivUsiASQG06Q1tCcSED81ft/xf/7P6iXAHI+wEw45wO0C+o0Q1e2ehZEAgBoDc1rbQC8BcPvxz+L
+        RleAmzeXxOmpc6I8sTqNOhqclVPLlpbuVGvJW1AJAK2hOZGA+AnFVI+FJQFgmHuHyRdRotF8QliQCQDN
+        CblDyKaU4d/o33rcJECvWlAJIEcHSXNoj+3asUf/Fb87gCziBHC2wBIAWuOlWqR9YrCUSymGtuzX8O96
+        4gRwtqASAFpDc2iP9f6vBrlrd5wAzhZYAhDy3UakfSJVyGWDuv8DNwmACZhoNEUJN5NKA00AtANIe6z9
+        OxLU/R80SoCl23dkX0Blci5SoA/gdgh6Ai2gObRP7DTUz4Lc0rVeAuAkQaBkT2B5RhTHIwLVBT2B6A6u
+        Z0EmADSH9omUqU+2s+FDszRKAIwDRLEnEAkwMxuOnkAJaQ7tE9QavOzFsm+31EsA2K1bS7LXjO9R616m
+        pufl7a2eBZoApDm0RxtgMahHQNAoAWAYPl1ZeSBWqPEUCaguD0LWCJSPgqQ9JYC2zH7AJ9wkQK9aoAlA
+        QPs4AUJkHUqA8N0CetUCTYDaLcBUL4WpEdjLFmwCUCOQtMdwcGgeAy1Dz5lsBEYIN/MCA00A+RioTYaq
+        Iwh2E4+BU+dFhXmU6lZQF/kYGJIJIaDWEUT3gcNh6QqWHUHxlLBAqHYFH6ZbwMg7YRoMqnUFc12qXUzY
+        uoLlYJCpvRO64eDIDgbNLoRiWrhFbTg4jBNC4uFgn8EjYG1CSDwlLDQWVAJIra0pYfGk0PBYYAmA+781
+        KRTv/QvbtPBetaASYM20cPyg1mBoFob0sgWZANCcWF0Ykg7J0jDL0GjiFld0M6hTIwsqAaTWpDmRgPih
+        Whx64+aSmDxzTpQrWBoWEagumORya+l2tZa8BZEA0PiRxaFYKkxXgo4vD8eTUpQXh2K6Wz0LIgHY5eEg
+        aWpaGDaIiJeH83HzCmgMrQlonpA/gFwiHsCjYKMEwAYR6A7GpgqTZ6KBtUHE3bth2CDCaYuYkG0SJbdW
+        QY9gFAjJFjHQ1nGTKJCOt4nrqPmdAFJbp23iwEC8UWRHzfcrAGkLje17Q9Z+AYPxVrEdNT8TAJpCW2hs
+        3x229osF3SPizaI7ZH4mADTNGOpHBGn8A2v+IQnBdvGYQ3fv/nJb3CeCeM2Ll+ZbAkBLt9vF93f4hRGL
+        N5bkY9N4pf2XRp1fuOKqCzYs5lcCyNE/ty+MAMkOvTIGJ6yXr43Dca5fv1E9evjNrwSAltDU/mYYi0cc
+        YLCDL41Chwl6zbjetFbAFaVbzI8EkI2/Zl8aBXZ26LVxmDeHt4dir0C8PrZVMPhy9dtrXdUO8CMBWnpt
+        HNh+sjMvjrQMwrVF9TjdZF4nwOrZ3+KLI4ES8Ktje928TgBoBw3tb4RdD+u0eB59xgG/PLqXzcsEgGbQ
+        Dhra3we9HtZpJxnw6+N72bxMAGgG7da8DZ6BddrpG81uThla3qvJInECOJtXCSAnfZBm0I6Aho6wzvUM
+        FIZfTBf1ZS+WkccJ4GyeJAA0Iq2gmX2cxwnWyaEU1ENeNAjjBHA2LxJANvxIKwKaNYR1cuww3n9CKWiz
+        7TYI4wRwtnYTQDb8SCNoRUCzhrBOJzCVKF0aWW5nQ4k4AZytrQSAJqQNNLJmebmBddYjWdCG2rkVxAng
+        bO0kADSBNgQ0cg3rrEfmRHZLylC/zLQ4WBQngLO1mgDQQmpC2hDQyDWssxGD+fe2UWtzvpX2QJwAztZK
+        AkgNSAtoQkCbpmCdblBODb9E95w76SZXE124+321urGtN8SGi5kjiD1pAC0IaNI0rNMtKWP4jXT5wEO3
+        /QOKqYkzS1eq1Y1tvSE2iBEXu0dAzCn20ICAFi3BOptBMXK7ZVexiyTYYeTE0PwX1erGtt72UmwQIy52
+        a6BYI+aIvX3sphVYZzP0Hc1uSBnaiJxB1CAJlCrvnvtcmDcXxNzt72IIxAIxseLDxa4GxJeNPm0EsSeg
+        QcuwzmZ5YTS7kQp+ZDUJmELbQAWR5TsNVSQNLYZALBCTxuKvTu9CrBFzArFvC9bZCthuRCkgCdzdDmKa
+        RJ75dNmnGCPW2NnFC1hnq1AibEyadDtw2SaIcQnEx/AuxRYxtp947cI62yE5duAxahvsVqiFGuQWtFFF
+        buhAsURMEVsCMfYM1ukFqYL+Op5R2x086mVk7CiGiCWBmHoO6/QO9WW6fM37veA0isiYUewQQwKx9AXW
+        6SWD+f3bqPV63M1jYgwhG3vyaeo4Ykcghr7BOr1mYHTv48mCNqSUDtyPbwnOIDaIEWKFmBGIna+wTr9Q
+        Tg2/mirqM3I4Ob4a/ADFAjFBbBAje3e737BOP+k/sWdrsqgdTJf23w9yl/KwImNAsUBMEBsCMQoM1hkE
+        lAwvpcyRU3i+zZR773ERda72l4whFvaTJEhYZ1BkTmS3JPPaW1jAgEugH4tRwwbqiLqizqg7YmCfaxE0
+        rDNokmP7nlIMbTedDZejmgiW8Kgj6oo6E6h7R2GdnaL67oI9iqnNyy1N5GwXPqBdAZUddZB9+FQnWTcs
+        usW6y5DAOjsNtRG2Jgv73qYAmpj1gufibroqoKzyWR5d4VQH1AV1sreBwgLrDAt9o9nNA1iVZI58qJT0
+        S2gxS0KYDCiTVT6UFWVG2VEH+yqrsME6w0j/17lnBorDr9Gl9ONMceSidWnFf3cF+OJLC3ynvQwoE8qG
+        MqKsBMocelhn2BnMq08PFHKvKKauY+drusxew5kHMVYfK0kQXCW86GyiY8izG2JXvwPfhe/Ed6MMKAvK
+        ZN9ur1tgnd1E39HshuRY7jm8AIEE+VPKVI+lS7pBLe0riqGvyMtyNSHklQJJIbGLvCo0kGd2VXB5Oadj
+        4Fg4Jo6N78B34Tvx3faZUd0I6+x2kp9kN20/qT87UBhSUvmhX+HlmEpBPZw21M9Spj6ZMdTLSkFbxOvT
+        qyzCh/+Hz+Cz+Bv8LY6BY+GYBI4dIbKJ/wNywTrvcw8bBQAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="printPresupuesto.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
